# mctrader-market-bithumb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.json
.claude/_overlay/: CLAUDE.md  project.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/mctrader_market_bithumb/: __init__.py  adapter.py  client.py  exceptions.py  mapping.py  rest_throttle.py  ws_client.py  ws_events.py  ws_mapping.py  ws_secret_guard.py  ws_subscribe.py
src/mctrader_market_bithumb/subscribers/: __init__.py  gap_detector.py  ingest_seq_counter.py  transaction_ws.py
tests/: test_adapter.py  test_candle_collector_retired.py  test_client.py  test_mapping.py  test_policy_imports.py  test_rest_throttle.py  test_ws_client.py  test_ws_mapping.py  test_ws_policy_imports.py  test_ws_secret_guard.py  test_ws_subscribe.py
tests/fixtures/bithumb/: public_candlestick_BTC_KRW_1h.json  ws_orderbookdepth_BTC_KRW.jsonl  ws_ticker_BTC_KRW.jsonl  ws_transaction_BTC_KRW.jsonl
tests/subscribers/: test_gap_detector.py  test_malformed_quarantine.py  test_transaction_ws_enhanced.py
