[project]
name = "mctrader-market-bithumb"
version = "0.2.0"
description = "Bithumb HTTP + WS impl (public-only, ADR-008 align)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "mccho8865", email = "mccho8865@gmail.com" }]
dependencies = [
    "mctrader-market @ git+https://github.com/mclayer/mctrader-market.git@main",
    "httpx>=0.27,<1",
    "websockets>=12,<14",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pyright>=1.1",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mctrader_market_bithumb"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["UP017", "N801", "N818", "SIM300", "I001"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
